[package]
name = "day18"
version = "0.1.0"
authors = ["Daniel Travieso <daniel@dgtravieso.com>"]
edition = "2018"

build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lalrpop-util = "0.19.0"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"]}